# azure-ai-content-understanding-python

./: pyproject.toml  requirements.txt
notebooks/: SOPie.ipynb
